@@ -10,3 +10,7 @@
 
 (launchpad:update-a-bug 483637 :title "modify test" :description "modify just testing")
 
+(launchpad:get-a-bug 483637)
+
+(launchpad:add-a-comment 483637 "test adding a comment")
+
